tests/transpiler/x/pl/append_builtin.pl
% Generated by Mochi transpiler 2025-07-19 12:54:22 UTC
:- style_check(-singleton).
substring(S,I,J,R) :- Len is J - I, sub_string(S, I, Len, _, R).
:- initialization(main).

main :-
    A is [1, 2],
    append(A, [3], R1), write(R1), nl.
